<resources>
    <string name="app_name">Chirp</string>
    <string name="description_new_chirp">Launches the menu to make a new chirp</string>
    <string name="login_register_prompt">New? Register Here!</string>
    <string name="registration_email_prompt">Enter a valid email</string>
    <string name="registration_password_prompt">Password</string>
    <string name="registration_handle_prompt">Enter your new handle</string>
    <string name="registration_email_error">Please use a valid email, or one that isn\'t currently in use</string>
    <string name="registration_password_error">Invalid password. Password may be no larger than 24 characters and can only contain: \n
                                               \u2022 Letters a-z and A-Z \n
                                               \u2022 Numbers 0-9</string>
    <string name="login_email_hint">Email Address...</string>
    <string name="login_password_hint">Password...</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register Now!</string>
    <string name="verify_password_hint">Verify Password</string>
    <string name="create_chirp_button">Create new Chirp!</string>
    <string name="edit_watchlist_button">Edit Watchlist!</string>
    <string name="chirp_content_placeholder">Chirp chirp chirpety chirp. This is a Chirp that chirps chirpily</string>
    <string name="chirp_author_placeholder">Fred Flintstone</string>
    <string name="chirp_date_placeholder">Posted 5 minutes ago...</string>
    <string name="new_chirp_hint">What would you like to say?</string>
    <string name="new_chirp_post_button_text">Post your Chirp!</string>
    <string name="logout_button_text">Log Out of Chirp</string>
    <string name="confirm_watchlist_button_text">Follow Selected Users!</string>

</resources>
