<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/chirp_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/chirp_author_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/chirp_date_created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chirp_date_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <TextView
        android:id="@+id/chirp_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chirp_content_placeholder" />

    <ImageView
        android:id="@+id/chirp_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_star_big_on" />
</LinearLayout>
